News UAT/force-app/main/default/objects/Product_Order__c/Product_Order__c.object-meta.xml
<CustomObject>
    <label>Product Order</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Product Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>