News UAT/force-app/main/default/objects/Product_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Order__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>