News UAT/force-app/main/default/objects/Product_Order__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <externalId>true</externalId>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>