News UAT/force-app/main/default/objects/Product_Order__c/fields/Additional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment__c</fullName>
    <label>Additional Comment</label>
    <type>TextArea</type>
</CustomField>