News UAT/force-app/main/default/objects/Product_Order__c/fields/Additional_Comment_For_Social_Setup__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comment_For_Social_Setup__c</fullName>
    <label>Additional Comment For Social Setup</label>
    <type>TextArea</type>
</CustomField>