News UAT/force-app/main/default/objects/Product_Order__c/fields/Advertiser_Name__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name__c</fullName>
    <formula>Order__r.Sales_Order__r.csmso__Advertiser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Name</label>
    <type>Text</type>
</CustomField>