News UAT/force-app/main/default/objects/Product_Order__c/fields/Advertiser_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name_Override__c</fullName>
    <label>Advertiser Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>