News UAT/force-app/main/default/objects/Product_Order__c/fields/Advertiser_Name_String__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Name_String__c</fullName>
    <formula>IF( ISBLANK( Advertiser_Name_Override__c ) ,  Account_Name__c , Advertiser_Name_Override__c) &amp; 
&quot; [&quot; &amp;   Sales_Team__c  &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertiser Name String</label>
    <type>Text</type>
</CustomField>