News UAT/force-app/main/default/objects/Product_Order__c/fields/Amazon_URL__c.field-meta.xml
<CustomField>
    <fullName>Amazon_URL__c</fullName>
    <label>Amazon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>