News UAT/force-app/main/default/objects/Product_Order__c/fields/Approved_By_Client__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Client__c</fullName>
    <label>Approved By Client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>