News UAT/force-app/main/default/objects/Product_Order__c/fields/Assign_Fulfilment_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Assign_Fulfilment_Owner_Name__c</fullName>
    <formula>Assigned_Fulfilment_Owner__r.LastName &amp; &quot;, &quot; &amp; Assigned_Fulfilment_Owner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assign Fulfilment Owner Name</label>
    <type>Text</type>
</CustomField>