News UAT/force-app/main/default/objects/Product_Order__c/fields/Assigned_Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign_Manager__c</fullName>
    <formula>IF( Order__r.Assigned_Campaign_Manager__c  &lt;&gt; null ,  Order__r.Assigned_Campaign_Manager__r.LastName &amp; &quot;, &quot; &amp; Order__r.Assigned_Campaign_Manager__r.FirstName , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Campaign Manager</label>
    <type>Text</type>
</CustomField>