News UAT/force-app/main/default/objects/Product_Order__c/fields/Assigned_Fulfilment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Fulfilment_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Fulfilment Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>