News UAT/force-app/main/default/objects/Product_Order__c/fields/Billable_duration_months__c.field-meta.xml
<CustomField>
    <fullName>Billable_duration_months__c</fullName>
    <label>Billable duration (months)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>