News UAT/force-app/main/default/objects/Product_Order__c/fields/Briefing_Form__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form__c</fullName>
    <formula>Order__r.Briefing_Form__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Briefing Form</label>
    <type>Text</type>
</CustomField>