News UAT/force-app/main/default/objects/Product_Order__c/fields/Briefing_Form_Not_Valid__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form_Not_Valid__c</fullName>
    <label>Briefing Form Not Valid - Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough information</fullName>
            </value>
            <value>
                <fullName>Link not working</fullName>
            </value>
            <value>
                <fullName>Customer number incorrect</fullName>
            </value>
            <value>
                <fullName>No Phone Number</fullName>
            </value>
            <value>
                <fullName>No Website/ Information not on website</fullName>
            </value>
            <value>
                <fullName>Incomplete Brief</fullName>
            </value>
            <value>
                <fullName>Information not clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>