News UAT/force-app/main/default/objects/Product_Order__c/fields/Briefing_Form_Not_Valid_For_Social_Setup__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form_Not_Valid_For_Social_Setup__c</fullName>
    <label>Briefing Form Not Valid For Social Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not enough information</fullName>
            </value>
            <value>
                <fullName>Link not working</fullName>
            </value>
            <value>
                <fullName>Customer number incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>