News UAT/force-app/main/default/objects/Product_Order__c/fields/Briefing_Form_Valid_For_Social_Setup__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Form_Valid_For_Social_Setup__c</fullName>
    <label>Briefing Form Valid For Social Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>