News UAT/force-app/main/default/objects/Product_Order__c/fields/Budget_first_period__c.field-meta.xml
<CustomField>
    <fullName>Budget_first_period__c</fullName>
    <formula>Duration_first_period_days__c *  Budget_per_day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget first period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>