News UAT/force-app/main/default/objects/Product_Order__c/fields/Budget_last_period__c.field-meta.xml
<CustomField>
    <fullName>Budget_last_period__c</fullName>
    <formula>IF( OR(ISBLANK(Flight_Period_End_Date__c),AND(NOT(ISBLANK(Flight_Period_End_Date__c)), MONTH( Flight_Period_End_Date__c )&gt; MONTH( Product_Order_Start_Date__c ) )) , Duration_last_period_days__c * Budget_per_day__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget last period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>