News UAT/force-app/main/default/objects/Product_Order__c/fields/Budget_per_day__c.field-meta.xml
<CustomField>
    <fullName>Budget_per_day__c</fullName>
    <formula>Wholesale_Rate__c * Duration_months__c / Duration_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>