News UAT/force-app/main/default/objects/Product_Order__c/fields/Buy_Sheet_Date_Start_Valid__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sheet_Date_Start_Valid__c</fullName>
    <description>True when Start Date &gt;= Product Order Start Date &amp; Product type is Display or Social. Also True if Product type is not Display and not Social</description>
    <formula>( Fulfillment_Type__c  != &#39;Display&#39; &amp;&amp; Fulfillment_Type__c  != &#39;Social&#39;) 
||
(
( Fulfillment_Type__c  != &#39;Display&#39; || Fulfillment_Type__c  != &#39;Social&#39;) 
&amp;&amp;
($CustomMetadata.NXX2_Buysheet_Paramters__mdt.Extract_Start_From_Date.Start_Date__c &lt;= Product_Order_Start_Date__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True when Start Date &gt;= Product Order Start Date &amp; Product type is Display or Social. Also True if Product type is not Display and not Social</inlineHelpText>
    <label>Buy Sheet Date Start Valid</label>
    <type>Checkbox</type>
</CustomField>