News UAT/force-app/main/default/objects/Product_Order__c/fields/Buy_Sheet_Extracted__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sheet_Extracted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field is set by the ESB when the record has been successfully extracted to the Buy Sheet.</description>
    <inlineHelpText>Field is unchecked  automatically when the Product Order is updated and status &gt; Ready to Go Live. Field is checked when the record has been successfully extracted to the Buy Sheet.</inlineHelpText>
    <label>Buy Sheet Extracted</label>
    <type>Checkbox</type>
</CustomField>