News UAT/force-app/main/default/objects/Product_Order__c/fields/Buy_Sheet_Extracted_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sheet_Extracted_Batch_Id__c</fullName>
    <description>Batch ID update by ESB for all records exported in every single successful read cycle.</description>
    <inlineHelpText>Batch ID update by ESB for all records exported in every single successful read cycle.</inlineHelpText>
    <label>Buy Sheet Extracted Batch Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>