News UAT/force-app/main/default/objects/Product_Order__c/fields/Buy_Sheet_Network__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sheet_Network__c</fullName>
    <formula>IF( ISBLANK(Buy_Sheet_Network_Override__c) , Product_Configuration__r.Network__c, Buy_Sheet_Network_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy Sheet Network</label>
    <type>Text</type>
</CustomField>