News UAT/force-app/main/default/objects/Product_Order__c/fields/Buy_Sheet_Network_Override__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sheet_Network_Override__c</fullName>
    <label>Buy Sheet Network Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>