News UAT/force-app/main/default/objects/Product_Order__c/fields/Call_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Tracking_Number__c</fullName>
    <label>Call Tracking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>