News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Impression_Goal__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Impression_Goal__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &#39;Pending For Cancel&#39;), Monthly_Impression_Goal__c/30.4  *  Duration_days__c *  Impressions_Factor__c, Monthly_Impression_Goal__c  *  Duration_months__c *  Impressions_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Impression Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>