News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Manager__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager__c</fullName>
    <formula>Order__r.Assigned_Campaign_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Manager</label>
    <type>Text</type>
</CustomField>