News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Name_String__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_String__c</fullName>
    <formula>IF(ISBLANK( Campaign_Name_String_Override__c), 
( 
IF(ISNULL(Sales_Order_Number__c), &#39;&#39;, Sales_Order_Number__c ) &amp; 
IF(Order__r.Evergreen__c , &#39;E - &#39;, &#39; - &#39;) &amp; 
IF(ISBLANK(Advertiser_Name_Override__c), 
Account_Name__c, 
Advertiser_Name_Override__c)&amp; &quot; - &quot; &amp; 
IF(ISNULL(Proposed_Start_Date__c), &#39;&#39;, TEXT(YEAR(Proposed_Start_Date__c)) &amp; &#39;-&#39; &amp; 
LPAD(TEXT(MONTH(Proposed_Start_Date__c)),2,&quot;0&quot;)) &amp; 
IF (CONTAINS( Product_Type_Name__c , &#39;Display&#39;), 
IF(ISBLANK(Product_Node__r.Product_Code_For_BuySheet__c), 
&#39;&#39;, 
&#39; - &#39; &amp; Product_Node__r.Product_Code_For_BuySheet__c 
) 
,&#39;&#39;) 
&amp; 
IF(CONTAINS(Product_Node__r.Name, &#39;NX - Blended programmatic (Display/Mobile/Retargeting)&#39;), &#39; - OFN&#39;,
IF(CONTAINS(Product_Node__r.Name, &#39;News Corp Australia - Blended programmatic (Display/Mobile/Retargeting)&#39;), &#39; - ONN&#39;,&#39;&#39;)) 
), 

Campaign_Name_String_Override__c 
)</formula>
    <label>Campaign Name String</label>
    <type>Text</type>
</CustomField>