News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Name_String_Override__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_String_Override__c</fullName>
    <description>Manual override for Campaign Name String</description>
    <inlineHelpText>Manual override for Campaign Name String</inlineHelpText>
    <label>Campaign Name String Override</label>
    <length>100</length>
    <type>Text</type>
</CustomField>