News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Ready_for_Setup__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Ready_for_Setup__c</fullName>
    <label>Campaign Ready for Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>