News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Restart_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Restart_Date__c</fullName>
    <label>Restart Date</label>
    <type>Date</type>
</CustomField>