News UAT/force-app/main/default/objects/Product_Order__c/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <formula>TEXT( Order__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>