News UAT/force-app/main/default/objects/Product_Order__c/fields/Cancellation_Approved_By_Leadership_Team__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approved_By_Leadership_Team__c</fullName>
    <label>Cancellation Approved By Leadership?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>