News UAT/force-app/main/default/objects/Product_Order__c/fields/Checking_Resume_Date__c.field-meta.xml
<CustomField>
    <fullName>Checking_Resume_Date__c</fullName>
    <formula>IF(Campaign_Restart_Date__c = TODAY(), true, false)</formula>
    <label>Checking Resume Date</label>
    <type>Checkbox</type>
</CustomField>