News UAT/force-app/main/default/objects/Product_Order__c/fields/CO_Number__c.field-meta.xml
<CustomField>
    <fullName>CO_Number__c</fullName>
    <formula>Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO Number</label>
    <type>Text</type>
</CustomField>