News UAT/force-app/main/default/objects/Product_Order__c/fields/Cost_Model__c.field-meta.xml
<CustomField>
    <fullName>Cost_Model__c</fullName>
    <description>Same value is in Product Configuration Attribute with Name of Cost Model. Required for Buy Sheet Extract. Populated by a trigger</description>
    <inlineHelpText>Same value is in Product Configuration Attribute with Name of Cost Model.</inlineHelpText>
    <label>Cost Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>