News UAT/force-app/main/default/objects/Product_Order__c/fields/Creative_Approved__c.field-meta.xml
<CustomField>
    <fullName>Creative_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creative Approved</label>
    <type>Checkbox</type>
</CustomField>