News UAT/force-app/main/default/objects/Product_Order__c/fields/Current_Optimisation_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Optimisation_Date__c</fullName>
    <label>Current Optimisation Date</label>
    <type>Date</type>
</CustomField>