News UAT/force-app/main/default/objects/Product_Order__c/fields/Current_Social_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Current_Social_Go_Live__c</fullName>
    <label>Current Social Go Live</label>
    <type>Date</type>
</CustomField>