News UAT/force-app/main/default/objects/Product_Order__c/fields/Current_Social_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Current_Social_Kick_Off__c</fullName>
    <label>Current Social Kick Off</label>
    <type>Date</type>
</CustomField>