News UAT/force-app/main/default/objects/Product_Order__c/fields/Customer_Supplied_Creative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supplied_Creative__c</fullName>
    <label>Customer Supplied Creative?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>