News UAT/force-app/main/default/objects/Product_Order__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <formula>Order__r.Customer_Tier__c</formula>
    <label>Customer Tier</label>
    <type>Text</type>
</CustomField>