News UAT/force-app/main/default/objects/Product_Order__c/fields/Daily_Impression_Goal__c.field-meta.xml
<CustomField>
    <fullName>Daily_Impression_Goal__c</fullName>
    <formula>IF(Duration_days__c  = 0 , 0  , Campaign_Impression_Goal__c /  Duration_days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Impression Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>