News UAT/force-app/main/default/objects/Product_Order__c/fields/Daily_Spend_Cap__c.field-meta.xml
<CustomField>
    <fullName>Daily_Spend_Cap__c</fullName>
    <formula>IF( Duration_days__c = 0, 0,  Total_Budget_Cap__c /  Duration_days__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Spend Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>