News UAT/force-app/main/default/objects/Product_Order__c/fields/Datorama_Key__c.field-meta.xml
<CustomField>
    <fullName>Datorama_Key__c</fullName>
    <description>Unique field used as an ID for Datorama</description>
    <formula>&#39;dato_newsXtend_mcc_&#39;+ Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique field used as an ID for Datorama</inlineHelpText>
    <label>Datorama Key</label>
    <type>Text</type>
</CustomField>