News UAT/force-app/main/default/objects/Product_Order__c/fields/Day_Number_of_the_First_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_Number_of_the_First_Calendar_Month__c</fullName>
    <formula>DAY( Last_Day_of_the_First_Calendar_Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Number of the First Calendar Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>