News UAT/force-app/main/default/objects/Product_Order__c/fields/Days_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_Live__c</fullName>
    <description>Number of days the Product order is live</description>
    <formula>Today() - Product_Order_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days the Product order is live. Today date - Product Order Start Date.</inlineHelpText>
    <label>Days Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>