News UAT/force-app/main/default/objects/Product_Order__c/fields/Days_on_Setup__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Setup__c</fullName>
    <formula>Order__r.Day_s_on_Setup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on Setup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>