News UAT/force-app/main/default/objects/Product_Order__c/fields/Days_to_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Go_Live__c</fullName>
    <formula>Order__r.Day_s_to_Go_Live__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Go Live</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>