News UAT/force-app/main/default/objects/Product_Order__c/fields/Delta_Amount_GST_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Delta_Amount_GST_Inclusive__c</fullName>
    <label>Delta Amount (GST Inclusive)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>