News UAT/force-app/main/default/objects/Product_Order__c/fields/Delta_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delta_Duration__c</fullName>
    <label>Delta Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>