News UAT/force-app/main/default/objects/Product_Order__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Same value is in Product Configuration Attribute with Name of Discount. Required for Buy Sheet Extract. Populated by a trigger</description>
    <inlineHelpText>Same value is in Product Configuration Attribute with Name of Discount.</inlineHelpText>
    <label>Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>