News UAT/force-app/main/default/objects/Product_Order__c/fields/Do_you_have_GA_access__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_GA_access__c</fullName>
    <label>Do you have GA access?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>