News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_Comment__c.field-meta.xml
<CustomField>
    <fullName>Duration_Comment__c</fullName>
    <label>Duration Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>