News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_Current__c.field-meta.xml
<CustomField>
    <fullName>Duration_Current__c</fullName>
    <formula>IF(AND(ISBLANK(Product_Order_End_Date__c), ISBLANK(Product_Order_Start_Date__c)), 0, 
IF(OR(ISBLANK(Product_Order_End_Date__c), Product_Order_End_Date__c &gt; TODAY()), ABS(TODAY() - Product_Order_Start_Date__c), ABS(Product_Order_End_Date__c - Product_Order_Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(Current)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>