News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_days__c</fullName>
    <formula>IF( ISBLANK(Flight_Period_End_Date__c) , IF(ISBLANK(Product_Order_End_Date__c) || ISBLANK(Product_Order_Start_Date__c), 365, ABS(Product_Order_End_Date__c - Product_Order_Start_Date__c)), ABS(Flight_Period_End_Date__c - Product_Order_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>