News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_first_period_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_first_period_days__c</fullName>
    <formula>IF( OR(ISBLANK(Flight_Period_End_Date__c),AND(NOT(ISBLANK(Flight_Period_End_Date__c)), MONTH( Flight_Period_End_Date__c )&gt; MONTH( Product_Order_Start_Date__c ))) , Last_Day_of_the_First_Calendar_Month__c - Product_Order_Start_Date__c +1, Flight_Period_End_Date__c - Product_Order_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration first period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>