News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_last_period_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_last_period_days__c</fullName>
    <formula>IF(ISBLANK(Flight_Period_End_Date__c)  , Product_Order_End_Date__c - First_Day_of_the_Last_Calendar_Month__c, IF( AND( NOT( ISBLANK(Flight_Period_End_Date__c) ) ,MONTH( Flight_Period_End_Date__c )&gt; MONTH( Product_Order_Start_Date__c )) ,  Flight_Period_End_Date__c - First_Day_of_the_Last_Calendar_Month__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration last period (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>