News UAT/force-app/main/default/objects/Product_Order__c/fields/Duration_months__c.field-meta.xml
<CustomField>
    <fullName>Duration_months__c</fullName>
    <label>Duration (months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>