News UAT/force-app/main/default/objects/Product_Order__c/fields/Ebay_URL__c.field-meta.xml
<CustomField>
    <fullName>Ebay_URL__c</fullName>
    <label>Ebay URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>