News UAT/force-app/main/default/objects/Product_Order__c/fields/Email_Campaign_Is_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_Is_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Campaign Is Scheduled?</label>
    <type>Checkbox</type>
</CustomField>