News UAT/force-app/main/default/objects/Product_Order__c/fields/Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Evergreen__c</fullName>
    <formula>Order__r.Evergreen__c</formula>
    <label>Evergreen</label>
    <type>Checkbox</type>
</CustomField>