News UAT/force-app/main/default/objects/Product_Order__c/fields/External_System_ID2__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID2__c</fullName>
    <description>Used for Marketplace Feed URLs</description>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>