News UAT/force-app/main/default/objects/Product_Order__c/fields/External_System_ID_2__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID_2__c</fullName>
    <label>External System ID 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>